--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "lint": "jscs src --preset=google && echo \"Linting passed.\" || exit 0",
-    "test": "echo \"No tests yet\" && exit 1"
+    "lint": "jscs . --preset=google && echo \"Linting passed.\" || exit 0",
+    "karma-mocha": "./node_modules/karma/bin/karma start test/karma.mocha.conf.js",
+    "test": "npm run karma-mocha && echo \"\nTests passed.\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
     "socket.io": "^1.7.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "mocha": "^3.2.0"
   }
 }
