--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "lint": "jscs . --preset=google && echo \"Linting passed.\" || exit 0",
     "karma-mocha": "./node_modules/karma/bin/karma start test/karma.mocha.conf.js",
-    "test": "npm run karma-mocha && echo \"\nTests passed.\""
+    "test": "npm run karma-mocha && echo \"\nTests passed.\"",
+    "benchmark": "node ./test/rs.benchmark.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.14.0",
-    "socket.io": "^1.7.2"
-  },
   "devDependencies": {
+    "benchmark": "^2.1.3",
     "chai": "^3.5.0",
+    "express": "^4.14.0",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "socket.io": "^1.7.2"
   }
 }
